# mooncake

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  library.json  library.properties
.github/workflows/: cmake-multi-platform.yml
apps/common_apps/boot_anim_ascii/: boot_anim_ascii.h
cmake/: basic.cmake  esp_idf.cmake  idf.cmake
example/: CMakeLists.txt  ability_manager.cpp  ability_manager_test.cpp  app_ability.cpp  app_ability_test.cpp  basic.cpp  basic_demo.cpp  extension_test.cpp  multiple_apps_demo.cpp  singleton_test.cpp  ui_ability.cpp  ui_ability_test.cpp
example/arduino/: pio_example.cpp
example/framework/: CMakeLists.txt  app_internal_api_test.cpp  app_manager_basic.cpp  app_register_test.cpp  app_user_data_test.cpp  input_device_register_test.cpp  mooncake_basic.cpp  mooncake_framework_test.cpp  simplekv_test.cpp
example/mooncake/: mooncake_basic.cpp
include/mooncake/: mooncake.h
src/: lv_conf.h  mc_conf_internal.h  mooncake.cpp  mooncake.h  mooncake_templates.h  system_data_def.h  types.h
src/ability/: ability.h  app_ability.cpp  ui_ability.cpp  worker_ability.cpp
src/ability_manager/: ability_api_wrapping.cpp  ability_manager.cpp  ability_manager.h
src/app/: app.h  app_manager.cpp  app_manager.h  app_register.cpp  app_register.h
src/builtin_apps/: builtin_apps.h
src/builtin_apps/assets/: assets.h
src/builtin_apps/boot_anim/: boot_anim.cpp  boot_anim.h
src/builtin_apps/launcher/: launcher.cpp  launcher.h  launcher_bubble.cpp  launcher_bubble_cloud.cpp
src/builtin_apps/settings/: settings.cpp
src/builtin_apps/sketchpad/: sketchpad.cpp  sketchpad.h
src/builtin_apps/wf_user_custom/: wf_user_custom.h  (+1 more)
src/framework/: app.h  app_register.cpp  framework.cpp  framework.h
src/hal/: hal.cpp  hal.h  hal.hpp
src/input_system/: input_device.h  input_device_register.cpp  input_device_register.h
src/simplekv/: simplekv.cpp  simplekv.h
src/templates/: dummy.h  launcher.h
test/: example_output_test.py  test_cases.json
(+26 files in other folders)
